--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="I'm Fatima Imran" />
+    <meta name="description" content="I'm Umaiza Imran" />
 
     <!-- ========== Page Title ========== -->
-    <title>I'm Fatima Imran</title>
+    <title>I'm Umaiza Imran</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link
@@ -241,7 +241,7 @@
               <h1 class="text-invisible">WELCOME</h1>
               <h2>
                 Hey <img src="assets/img/shape/4.png" alt="Icon" /> I'm
-                <span>Fatima Imran</span>
+                <span>Umaiza Imran</span>
               </h2>
               <h3 class="title">
                 <span class="header-caption" id="page-top">
@@ -295,7 +295,7 @@
             <h4 class="sub-title">About Me</h4>
 
             <p>
-              Hi, my name is <b>Fatima Imran</b>, and I’m a passionate young
+              Hi, my name is <b>Umaiza Imran</b>, and I’m a passionate young
               learner with a dream to make a difference. I’ve been honing my
               skills in Art & Craft, Dancing, and Abacus from a very young age.
               Whether it’s creating vibrant art pieces, performing on stage, or
@@ -1382,7 +1382,7 @@
         
           </div>
           <div class="col-lg-6 text-end">
-            <p>&copy; 2024  Fatima Imran. All Rights Reserved</p>
+            <p>&copy; 2024  Umaiza Imran. All Rights Reserved</p>
           </div>
         </div>
       </div>
